# presu

./: README.md
backend/: Cargo.toml
backend/macros/: Cargo.toml
backend/macros/src/: crud.rs  lib.rs  pagination.rs
backend/migrations/: 20251201194256_init.down.sql  20251201194256_init.up.sql  20251201194309_roles.up.sql  20251201194312_users.down.sql  20251201194312_users.up.sql  20251201194322_versions.down.sql  20251201194322_versions.up.sql  20251201194335_units.down.sql  20251201194335_units.up.sql  20251201194339_prices.down.sql  20251201194339_prices.up.sql  20251201194348_descompositions.down.sql  20251201194348_descompositions.up.sql  20251201194358_projects.down.sql  20251201194358_projects.up.sql  20251201200133_elements.up.sql  20251201200136_measurements.down.sql  20251202063656_budgets.down.sql  20251202063656_budgets.up.sql  20251203050951_elements.down.sql  20251203050951_elements.up.sql  20251203051114_measurements.up.sql
backend/src/: lib.rs  main.rs
backend/src/http/: auth.rs  health.rs  mod.rs  project.rs  stats.rs  unit.rs  version.rs
backend/src/models/: budget.rs  data.rs  descomposition.rs  element.rs  filterable.rs  measurement.rs  mod.rs  paginable.rs  price.rs  project.rs  response.rs  role.rs  token_claims.rs  unit.rs  user.rs  version.rs
backend/tests/: auth_tests.rs  budget_tests.rs  common.rs  descomposition_tests.rs  element_tests.rs  fallback_tests.rs  health_tests.rs  measurement_tests.rs  price_tests.rs  project_tests.rs  role_tests.rs  stats_tests.rs  token_claims_tests.rs  unit_tests.rs  user_tests.rs  version_tests.rs
frontend/: .env.development  README.md  eslint.config.js  i18next.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  constants.ts  main.tsx
frontend/src/__mocks__/: react-router-dom.tsx
frontend/src/common/: types.ts  utils.ts
frontend/src/components/: AuthContext.tsx  CustomTable.tsx  LanguageSwitcher.tsx  ModeContext.tsx  ModeSwitcher.tsx  SignIn.tsx
frontend/src/layouts/: AdminLayout.tsx  PublicLayout.tsx
frontend/src/models/: budget.ts  descomposition.ts  element.ts  index.ts  measurement.ts  price.ts  project.ts  response.ts  role.ts  unit.ts  user.ts  version.ts
frontend/src/services/: api.client.ts  budget.service.ts  index.ts  (+10 more)
(+54 files in other folders)
