[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "chrono", "runtime-tokio", "json"] }
